update the format and package name

--- a/CordovaLib/cordova.gradle
+++ b/CordovaLib/cordova.gradle
@@ -90,7 +90,7 @@ int compareVersions(String a, String b) {
 String getAndroidSdkDir() {
     def rootDir = project.rootDir
     def androidSdkDir = null
-    String envVar = System.getenv("ANDROID_HOME")
+    String envVar = System.getenv('H:\\Android\\android-sdk')
     def localProperties = new File(rootDir, 'local.properties')
     String systemProperty = System.getProperty("android.home")
     if (envVar != null) {
